# ADA

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
ada_cds/: __init__.py  audit.py  config.py  engine.py  models.py  ontology_service.py  rule_registry.py  temporal.py  utils.py
api/: __init__.py  dependencies.py  router.py  schemas.py
configs/: default.json
configs/tenants/: clinic_001.json
ontologies/: ada_extension.ttl
scripts/: create_example_config.py
tests/: test_engine.py
